--- a/vanillaStyle.css
+++ b/vanillaStyle.css
@@ -1,11 +1,11 @@
-html{
+html {
     scroll-behavior: smooth;
 }
+
 body {
     padding-left: 0;
     margin: 0;
     background-color: black;
-    /* font-family: "Montserrat", sans-serif; */
     overflow-x: hidden;
 }
 
@@ -97,7 +97,7 @@ h1 {
 
 .about {
     font-family: "Montserrat", sans-serif;
-    padding-left: 3rem;
+    padding-left: 1.5rem;
     padding-right: 3rem;
     padding-top: 13rem;
     height: 100vh;
@@ -113,7 +113,6 @@ h1 {
 
 #timeline {
     width: 100%;
-    /* background-color: blue; */
 }
 
 .about h3 {
@@ -129,18 +128,25 @@ h1 {
 
 
 .timeline-container {
-    width: 80%;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
     margin: 0 auto;
-    overflow: auto;
-    padding: 2%;
+    overflow-x: hidden;
+    padding: 0;
+    position: relative;
+    box-sizing: border-box;
 }
 
+
 .right-content {
-    float: left;
-    display: block;
-    width: 40%;
-    padding: 1% 2%;
+    position: relative;
+    border-left: 3px solid transparent;
+    padding-left: 3.25rem;
+    width: 100%;
+    box-sizing: border-box;
 }
+
 .left-content .content {
     text-align: left;
     margin: 150px 0 0;
@@ -159,7 +165,7 @@ h1 {
 }
 
 .left-content .more-padding {
-    padding-right: 100px;
+    padding-right: 0px;
 }
 
 .right-content .more-padding {
@@ -172,37 +178,60 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    z-index:0; 
+    z-index: 0;
     pointer-events: none;
 }
-  
+
 
 /* animated progress bar */
 .timeline-container {
+    display: flex;
+    flex-direction: row;
     width: 100%;
     margin: 0 auto;
-    overflow: auto;
-    padding: 2%;
+    overflow-x: hidden;
+    padding: 0;
     position: relative;
-}
-
-.left-content {
-    border-right: 3px solid grey;
-    text-align: right;
-    position: relative;
+    box-sizing: border-box;
 }
 
 .right-content {
-    margin-left: 5px;
-    width: 100%;
+    flex: 1;
 }
 
-.left-content::after {
+
+.left-content {
+    display: none;
+    border-right: 3px solid grey;
+    text-align: right;
+    flex: 1;
+    position: relative;
+}
+
+.left-content .right-content {
+    min-width: 0;
+}
+
+.right-content::after {
+    margin-left: 2rem;
     content: '';
     position: absolute;
     width: 3px;
     top: 0;
-    left: 0%;
+    left: 0;
+    background-color: #00ffc3;
+    animation: growBar 4s ease-in-out forwards;
+    transform-origin: top;
+}
+
+
+.left-content::after {
+    display: none;
+    content: '';
+    position: absolute;
+    width: 3px;
+    top: 0;
+    left: 0;
     background-color: #00ffc3;
     animation: growBar 4s ease-in-out forwards;
     transform-origin: top;
@@ -214,7 +243,7 @@ h1 {
     }
 
     100% {
-        height: 75vh;
+        height: 80vh;
     }
 }
 
@@ -268,11 +297,13 @@ h1 {
     padding-left: 1rem;
     display: flex;
     flex-wrap: wrap;
-    /* justify-content: space-between; */
     grid-row-start: auto;
 }
-#imgWrapper{
-    width: 4.2rem; margin-right: 3rem; margin-bottom: 1.8rem;
+
+#imgWrapper {
+    width: 4.2rem;
+    margin-right: 3rem;
+    margin-bottom: 1.8rem;
 }
 
 #card {
